loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:13: error: ';' expected but ')' found.
}while(!sortieTrouvee())) 
                        ^